--- a/index.html
+++ b/index.html
@@ -1184,12 +1184,18 @@ function IconPicker({ initialQuery = '', onPick, onClose }) {
       React.createElement('button', { className: 'absolute right-3 top-3 btn-stone', onClick: onClose }, 'Close'),
 
       React.createElement('div', { className: 'mb-3 flex items-center gap-2' },
-        React.createElement('input', {
-          className: 'w-full rounded-lg border-slate-300',
-          placeholder: 'Search file name prefix (e.g., "Zulrah", "Dragon", "Herblore")',
-          value: q,
-          onChange: e => setQ(e.target.value)
-        }),
+React.createElement('input', {
+  className: 'w-full rounded-lg border-slate-300',
+  placeholder: 'Search file name prefix (e.g., "Zulrah", "Dragon", "Herblore")',
+  value: q,
+  onChange: e => setQ(e.target.value),
+  onKeyDown: (e) => {
+    if (e.key === 'Enter' && !loading && q.trim().length >= 2) {
+      e.preventDefault();
+      run(q);
+    }
+  }
+}),
         React.createElement('button', {
           className: 'btn-bronze',
           disabled: (q.trim().length < 2) || loading,
@@ -1209,22 +1215,26 @@ function IconPicker({ initialQuery = '', onPick, onClose }) {
 
       err && React.createElement('div', { className: 'text-sm text-rose-600' }, err),
 
-      React.createElement('div', { className: 'grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 gap-3 max-h-[60vh] overflow-auto' },
-        items.map(f =>
-          React.createElement('button', {
-            key: f.name,
-            className: 'rounded-lg border border-slate-200 bg-white/70 hover:shadow soft p-2 flex flex-col items-center gap-2',
-          },
-            React.createElement('img', {
-              src: f.thumbUrl || f.fileUrl,
-              alt: f.name,
-              className: 'w-20 h-20 object-contain',
-              onError: (e) => { e.currentTarget.style.visibility = 'hidden'; }
-            }),
-            React.createElement('div', { className: 'text-[10px] text-slate-700 text-center break-all' }, f.name)
-          )
-        )
-      )
+React.createElement('div', { className: 'grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 gap-3 max-h-[60vh] overflow-auto' },
+  items.map(f =>
+    React.createElement('button', {
+      key: f.name,
+      className: 'rounded-lg border border-slate-200 bg-white/70 hover:shadow soft p-2 flex flex-col items-center gap-2',
+      onClick: () => {                 // ⟵ apply + close
+        onPick?.(f.thumbUrl || f.fileUrl, f);
+        onClose?.();
+      }
+    },
+      React.createElement('img', {
+        src: f.thumbUrl || f.fileUrl,
+        alt: f.name,
+        className: 'w-20 h-20 object-contain',
+        onError: (e) => { e.currentTarget.style.visibility = 'hidden'; }
+      }),
+      React.createElement('div', { className: 'text-[10px] text-slate-700 text-center break-all' }, f.name)
+    )
+  )
+)
     )
   );
 }
