OSClanTools, NOT Creeps.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Creeps Inc — Events</title>
+  <title>OSClan Tools — Events</title>
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -114,7 +114,7 @@
     <div class="flex items-center gap-3">
       <div class="w-11 h-11 rounded-xl bg-indigo-600 text-white grid place-items-center font-bold shadow-soft">CI</div>
       <div>
-        <h1 class="text-xl font-semibold">Creeps Inc — Events Hub</h1>
+        <h1 class="text-xl font-semibold">OSClan Tools — Events Hub</h1>
         <p class="text-slate-600 text-sm">Choose an event type to get started.</p>
       </div>
     </div>
@@ -148,7 +148,7 @@
           <span class="text-xs font-semibold bg-emerald-600 text-white rounded-md px-2.5 py-1 shadow">Ready</span>
         </div>
         <p class="mt-3 text-sm text-slate-700">
-          Snake-path board builder with effects, icons, and JSON export for your Discord bot.
+          Snake-path style board with tiles, effects and race. Teams race to the end completing tasks along the way.
         </p>
         <div class="mt-4">
           <span class="btn-bronze inline-block">Open</span>
