--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
         </div>
       </a>
     </div>
+    <a id="authLink" class="btn-bronze inline-flex items-center gap-2" href="/auth/login">Login</a>
   </main>
 
   <!-- Footer -->
