--- a/tiletrials.html
+++ b/tiletrials.html
@@ -1690,6 +1690,7 @@ return React.createElement('div', { className: 'fixed inset-0 z-50 grid place-it
     const root = ReactDOM.createRoot(document.getElementById('root'));
     root.render(React.createElement(App));
   </script>
+  <a id="authLink" class="btn-bronze inline-flex items-center gap-2" href="/auth/login">Login</a>
 </body>
 
 </html>
