--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OSClan Tools — Events</title>
+      <a id="authLink" class="btn-bronze inline-flex items-center gap-2" href="/auth/login">Login</a>
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- after the element -->
+<script src="/js/auth.js"></script>
+
   <script>
     tailwind.config = {
       theme: {
@@ -232,7 +236,6 @@
         </div>
       </a>
     </div>
-    <a id="authLink" class="btn-bronze inline-flex items-center gap-2" href="/auth/login">Login</a>
   </main>
 
   <!-- Footer -->
