--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- after the element -->
 
   <script>
     tailwind.config = {
@@ -45,37 +44,31 @@
 
     html, body {
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      /* Fallback background in case YT fails to load */
+      /* Fallback background if video fails to load */
       background: #000 url('assets/images/bg.png') center / cover fixed no-repeat;
       min-height: 100vh;
     }
 
-    /* ===== Background YouTube video ===== */
+    /* ===== Background video (HTML5) ===== */
     .video-bg {
       position: fixed;
       inset: 0;
-      z-index: -1;            /* sits behind all content */
+      z-index: -1;
       overflow: hidden;
-      pointer-events: none;   /* ignore clicks */
+      pointer-events: none;
+      background: #000; /* prevents flash of white on load */
     }
-    .video-bg iframe {
+    .video-bg video {
       position: absolute;
       top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      /* Cover logic: swap sizing based on aspect */
-      width: 177.7778vh;  /* 100 * 16/9 */
-      height: 100vh;
-    }
-    @media (min-aspect-ratio: 16/9) {
-      .video-bg iframe {
-        width: 100vw;
-        height: 56.25vw; /* 100 * 9/16 */
-      }
-    }
-    .video-overlay {
-      position: absolute;
-      inset: 0;
-      background: rgba(0,0,0,0.5); /* 50% overlay */
+      transform: translate(-50%, -50%) scale(1.08); /* slight scale to hide blur edges */
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      object-fit: cover;
+      opacity: 0.5;               /* 50% opacity */
+      filter: blur(6px);          /* blurred background */
     }
 
     /* Parchment panel with bronze trim */
@@ -140,10 +133,13 @@
 </head>
 
 <body class="text-slate-900">
-  <!-- Background video layer -->
+  <!-- Background video layer (HTML5) -->
   <div class="video-bg" aria-hidden="true">
-    <div id="yt-player"></div>
-    <div class="video-overlay"></div>
+    <video id="bg-video" autoplay muted loop playsinline preload="auto" poster="assets/images/bg.png">
+      <source src="assets/YTDown.com_YouTube_Old-School-RuneScape-Official-Varlamore_Media_aZQJ1nJfyIo_001_1080p.mp4" type="video/mp4">
+      <!-- Optional: add a .webm source for better compression if you have it -->
+      Your browser does not support the video tag.
+    </video>
   </div>
 
   <!-- Top bar -->
@@ -254,64 +250,45 @@
     </div>
   </div>
 
-  <!-- YouTube IFrame API -->
-  <script src="https://www.youtube.com/iframe_api"></script>
+  <!-- Background video segment control -->
   <script>
-    const YT_VIDEO_ID = 'aZQJ1nJfyIo';
+    // Keep the same-style variables for segment control
     const LOOP_START = 1;   // 0:01
     const LOOP_END = 36;    // 0:36
-    let ytPlayer, loopTimer;
+    const SEGMENT_PADDING = 0.1; // seconds before end to jump back
 
-    function onYouTubeIframeAPIReady() {
-      ytPlayer = new YT.Player('yt-player', {
-        videoId: YT_VIDEO_ID,
-        playerVars: {
-          autoplay: 1,
-          controls: 0,
-          disablekb: 1,
-          fs: 0,
-          modestbranding: 1,
-          rel: 0,
-          playsinline: 1,
-          loop: 1,
-          playlist: YT_VIDEO_ID,  // required for loop
-          start: LOOP_START,
-          end: LOOP_END,
-          mute: 1,
-          iv_load_policy: 3,
-          cc_load_policy: 0
-        },
-        events: {
-          onReady: (e) => {
-            try { e.target.mute(); } catch {}
-            try { e.target.setVolume(0); } catch {}
-            e.target.seekTo(LOOP_START, true);
-            e.target.playVideo();
+    const vid = document.getElementById('bg-video');
 
-            // Hard-guard loop for the 1s..36s segment
-            loopTimer = setInterval(() => {
-              if (!ytPlayer || typeof ytPlayer.getCurrentTime !== 'function') return;
-              const t = ytPlayer.getCurrentTime();
-              if (t >= (LOOP_END - 0.25)) {
-                ytPlayer.seekTo(LOOP_START, true);
-              }
-            }, 250);
-          },
-          onStateChange: (e) => {
-            if (e.data === YT.PlayerState.ENDED) {
-              ytPlayer.seekTo(LOOP_START, true);
-              ytPlayer.playVideo();
-            }
-            if (e.data === YT.PlayerState.PLAYING) {
-              try { ytPlayer.mute(); } catch {}
-            }
-          }
-        }
-      });
-    }
+    // Ensure autoplay works (muted) and start at LOOP_START
+    const primeVideo = () => {
+      try { vid.muted = true; } catch {}
+      if (Number.isFinite(vid.duration)) {
+        vid.currentTime = Math.min(LOOP_START, Math.max(0, vid.duration - 0.25));
+      } else {
+        // If metadata isn't ready yet, wait for it
+        vid.addEventListener('loadedmetadata', () => {
+          vid.currentTime = Math.min(LOOP_START, Math.max(0, vid.duration - 0.25));
+        }, { once: true });
+      }
+      vid.play().catch(() => {/* ignore autoplay rejections since muted */});
+    };
 
-    window.addEventListener('beforeunload', () => {
-      if (loopTimer) clearInterval(loopTimer);
+    primeVideo();
+
+    // Guard the segment: jump back to LOOP_START near LOOP_END
+    const onTimeUpdate = () => {
+      if (vid.currentTime >= (LOOP_END - SEGMENT_PADDING)) {
+        vid.currentTime = LOOP_START;
+        // On some browsers, calling play() after seeking keeps it smooth
+        vid.play().catch(()=>{});
+      }
+    };
+    vid.addEventListener('timeupdate', onTimeUpdate);
+
+    // If the video ever ends (shouldn't, but just in case), restart segment
+    vid.addEventListener('ended', () => {
+      vid.currentTime = LOOP_START;
+      vid.play().catch(()=>{});
     });
 
     // Simple "Coming soon" toast for placeholder links
